commtting latest changes

--- a/Pharmceutical.css
+++ b/Pharmceutical.css
@@ -2,7 +2,7 @@
     top: 0;
     margin: auto;
     background-color: rgb(107, 106, 106);
-    padding: 20px;
+    padding: 15px;
     color: white;
     text-align: center;
     width: 100%;
@@ -12,7 +12,7 @@
  .footer .container{
     bottom: 0;
     background-color: rgb(107, 106, 106);
-    padding: 20px;
+    padding: 15px;
     position: fixed;
     text-align: center;
     color: white;
@@ -38,14 +38,14 @@
 }
 .parent-menu > li{
     display: inline-block;
-    padding: 1em;           
+    padding: 0.8em;           
 }
 
 .parent-menu > li > a {
    text-decoration: none;
    color: white;
    padding: 1em;
-   font-size: 30px;
+   font-size: 25px;
 }
 
 .parent-menu > li > a:hover {
@@ -118,7 +118,7 @@ nav{
     .background-animated-image{
    background-image: url("./Images/Animation/ani1.jpg");  
    border: 2px solid steelblue; 
-   height: 50%;
+   height: 80%;
    width: 100%;  
    position: absolute;
    margin : auto;
@@ -126,6 +126,7 @@ nav{
    animation-duration: 5s;
    animation-iteration-count : infinite ;
    background-size: 100%; 
+   
 }  
   @keyframes image-slide {
    
@@ -165,9 +166,11 @@ nav{
     overflow-y:scroll;
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    background: #f1f1f1;
- 
-
+    background: #f1f1f1;    
+    aspect-ratio: 1.5/1;
+    /* scroll-snap-type: y mandatory; */
+  
+    
 }
 
 .form-elements-layout{
@@ -211,3 +214,78 @@ button{
     .button-style{
         margin-left: 35%;
     }
+
+
+    .covid-care-section{
+        margin-top: 40%;
+        position : relative;
+       
+    }
+
+    .diabetes-care-section{
+        margin-top: 0px;
+        position: relative;
+       
+    }
+
+    .cart-button-style{
+        color: orange;
+        background-color: silver ;
+        /* margin: 20px  5px 20px 5px; */
+        height: 40px;   
+        width: 90%;
+        border-radius: 8px;
+        font-size: 20px;
+        border: none;
+        border: 2px solid blue;
+        font-weight: bold;
+        margin: 10px auto;
+       
+    }
+    .cart-items{
+        width: 18%;
+        height: 10%;
+        border: none;
+       box-shadow: 5px 5px 5px 5px grey;
+        /* justify-content: space-between; */
+        margin: 5rem auto 0 auto;
+        padding: 30px;     
+        font-size: 20px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+        background: #f1f1f1;
+        display: inline-block;
+       /* margin: auto; */
+        margin-left: 25px;
+        margin-top: 5px;     
+        margin-right: 25px;
+        /* float:left; */
+        
+        
+    } 
+
+    .cart-image-layout img{
+        width: 250px;
+        height: 120px;
+        
+    }
+
+    .cart-items+div{
+        margin-bottom: 5%;
+    }
+
+    .cart-items button:active{
+        background-color: rgb(250, 234, 230) ;
+        border-color: rgb(0, 255, 76) ;
+    }
+
+    .cart-items p{
+       color: blue;
+       margin: -5px;
+    }
+
+     /* .cart-items h4{
+ 
+        padding-top: 0px;
+     }
+   */
+
