--- a/Pharmceutical.css
+++ b/Pharmceutical.css
@@ -1,4 +1,4 @@
-.header{
+.header {
     top: 0;
     margin: auto;
     background-color: rgb(107, 106, 106);
@@ -6,10 +6,10 @@
     color: white;
     text-align: center;
     width: 100%;
-    
+
 }
 
- .footer .container{
+.footer .container {
     bottom: 0;
     background-color: rgb(107, 106, 106);
     padding: 15px;
@@ -17,143 +17,154 @@
     text-align: center;
     color: white;
     width: 100%;
- }
+
+}
 
 
 
-  /* body{
+/* body{
     border: 2px solid black;
   } */
 
-.list-element-styling{
+.list-element-styling {
     list-style-type: none;
-   
+
 }
-.parent-menu{
-    background-color : rgb(175, 175, 175);
+
+.parent-menu {
+    background-color: rgb(175, 175, 175);
     list-style-type: none;
     margin: 0%;
     width: 100%;
-    
+
 }
-.parent-menu > li{
+
+.parent-menu>li {
     display: inline-block;
-    padding: 0.8em;           
+    padding: 0.8em;
 }
 
-.parent-menu > li > a {
-   text-decoration: none;
-   color: white;
-   padding: 1em;
-   font-size: 25px;
+.parent-menu>li>a {
+    text-decoration: none;
+    color: white;
+    padding: 1em;
+    font-size: 25px;
 }
 
-.parent-menu > li > a:hover {
-  background-color: black;
-  padding: 10px;
+.parent-menu>li>a:hover {
+    background-color: black;
+    padding: 10px;
 }
 
-.item-containing-child-menu{
-    position:relative;
+.item-containing-child-menu {
+    position: relative;
 }
-.child-menu,.child-menu-link3{
-    background-color : lightgrey;
+
+.child-menu,
+.child-menu-link3 {
+    background-color: lightgrey;
     list-style-type: none;
-    display: none;            
-    position:absolute;
+    display: none;
+    position: absolute;
     top: 60px;
     left: 25px;
     white-space: nowrap;
-    
-   
+
+
 }
 
-.item-containing-child-menu:hover .child-menu{
-   display: block;
+.item-containing-child-menu:hover .child-menu {
+    display: block;
 }
 
-.child-menu > li > a {
-   text-decoration: none;
-   color: blue;
-   
-   font-size: 25px;
-}
-
-
-.item-containing-child-menu-link3{
-    position:relative;
-    
+.child-menu>li>a {
+    text-decoration: none;
+    color: blue;
+    font-size: 25px;
 }
 
 
-.child-menu-link3 > li > a {
-   text-decoration: none;
-   color: blue;
+.item-containing-child-menu-link3 {
+    position: relative;
 
-   font-size: 25px;
 }
 
-.item-containing-child-menu-link3:hover .child-menu-link3{
-   display: block;
-} 
 
-.child-menu li:not(:last-child){
-    margin-bottom: 20px; 
+.child-menu-link3>li>a {
+    text-decoration: none;
+    color: blue;
+
+    font-size: 25px;
+}
+
+.item-containing-child-menu-link3:hover .child-menu-link3 {
+    display: block;
+}
+
+.child-menu li:not(:last-child) {
+    margin-bottom: 20px;
     margin-top: 20px;
     padding-right: 15px;
-  
- }
 
- .child-menu-link3 li:not(:last-child){
-    margin-bottom: 20px;  
-    margin-top: 20px;  
-    padding-right: 15px; 
- }
+}
 
-nav{
+.child-menu-link3 li:not(:last-child) {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding-right: 15px;
+}
+
+nav {
     position: sticky;
     top: 0%;
+}
+
+.background-animated-image {
+    background-image: url("./Images/Animation/ani1.jpg");
+    border: 2px solid steelblue;
+    height: 80%;
+    width: 100%;
+    margin-top: 15%;
+    position: absolute;
+    /* margin : auto; */
+    animation-name: image-slide;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    background-size: 100%;
+    border-width: thick;
+
+}
+
+@keyframes image-slide {
+
+    0% {
+
+        background-image: url("./Images/Animation/ani1.jpg");
     }
 
-    .background-animated-image{
-   background-image: url("./Images/Animation/ani1.jpg");  
-   border: 2px solid steelblue; 
-   height: 80%;
-   width: 100%;  
-   position: absolute;
-   margin : auto;
-   animation-name : image-slide;  
-   animation-duration: 5s;
-   animation-iteration-count : infinite ;
-   background-size: 100%; 
-   
-}  
-  @keyframes image-slide {
-   
-   0%{
-    
-    background-image: url("./Images/Animation/ani1.jpg");
-   }
-    25%{
-       
+    25% {
+
         background-image: url("./Images/Animation/ani2.png");
     }
-    50%{
-        
+
+    50% {
+
         background-image: url("./Images/Animation/ani3.jpg");
     }
-    75%{
-      
-        background-image: url("./Images/Animation/ani4.jpg");
-    }
-    100%{
-       
+
+    75% {
+
         background-image: url("./Images/Animation/ani4.jpg");
     }
 
-}  
+    100% {
 
-.form-page-layout{
+        background-image: url("./Images/Animation/ani4.jpg");
+    }
+
+}
+
+.form-page-layout {
     width: 60%;
     height: 100%;
     border: none;
@@ -163,129 +174,136 @@ nav{
     margin: 5rem auto 0 auto;
     padding: 40px;
     overflow: hidden;
-    overflow-y:scroll;
+    overflow-y: scroll;
     font-size: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    background: #f1f1f1;    
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background: #f1f1f1;
     aspect-ratio: 1.5/1;
     /* scroll-snap-type: y mandatory; */
-  
-    
+
+
 }
 
-.form-elements-layout{
+.form-elements-layout {
     width: 60%;
     height: 100%;
     /* border: 2px solid white; */
     /* margin-top: 50px;
     margin-left: 50px; */
-  
+
 }
 
-.textfield{
+.textfield {
     outline: none;
     border: none;
     height: 40px;
     font-size: 13px;
     background: none;
     border-bottom: 1px solid silver;
-    
+
 }
- .lab-image-layout{
-   
+
+.lab-image-layout {
+
     padding-left: 5%;
     width: 50%;
 
-}  
+}
 
-button{
- 
+button {
+
     background-color: rgb(175, 100, 240);
     color: white;
     margin: 20px;
-    height: 30px;   
+    height: 30px;
     width: 80px;
     border-radius: 4px;
     font-size: 15px;
     border: none;
-  
-    }
 
-    .button-style{
-        margin-left: 35%;
-    }
+}
+
+.button-style {
+    margin-left: 35%;
+}
 
 
-    .covid-care-section{
-        margin-top: 40%;
-        position : relative;
-       
-    }
+.covid-care-section {
+    margin-top: 55%;
+    position: relative;
 
-    .diabetes-care-section{
-        margin-top: 0px;
-        position: relative;
-       
-    }
+}
 
-    .cart-button-style{
-        color: orange;
-        background-color: silver ;
-        /* margin: 20px  5px 20px 5px; */
-        height: 40px;   
-        width: 90%;
-        border-radius: 8px;
-        font-size: 20px;
-        border: none;
-        border: 2px solid blue;
-        font-weight: bold;
-        margin: 10px auto;
-       
-    }
-    .cart-items{
-        width: 18%;
-        height: 10%;
-        border: none;
-       box-shadow: 5px 5px 5px 5px grey;
-        /* justify-content: space-between; */
-        margin: 5rem auto 0 auto;
-        padding: 30px;     
-        font-size: 20px;
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-        background: #f1f1f1;
-        display: inline-block;
-       /* margin: auto; */
-        margin-left: 25px;
-        margin-top: 5px;     
-        margin-right: 25px;
-        /* float:left; */
-        
-        
-    } 
+.diabetes-care-section {
+    margin-top: 0px;
+    position: relative;
 
-    .cart-image-layout img{
-        width: 250px;
-        height: 120px;
-        
-    }
+}
 
-    .cart-items+div{
-        margin-bottom: 5%;
-    }
+.cart-button-style {
+    color: orange;
+    background-color: silver;
+    /* margin: 20px  5px 20px 5px; */
+    height: 40px;
+    width: 90%;
+    border-radius: 8px;
+    font-size: 20px;
+    border: none;
+    border: 2px solid blue;
+    font-weight: bold;
+    margin: 10px auto;
 
-    .cart-items button:active{
-        background-color: rgb(250, 234, 230) ;
-        border-color: rgb(0, 255, 76) ;
-    }
+}
 
-    .cart-items p{
-       color: blue;
-       margin: -5px;
-    }
+.cart-items {
+    width: 18%;
+    height: 10%;
+    border: none;
+    box-shadow: 5px 5px 5px 5px grey;
+    /* justify-content: space-between; */
+    margin: 5rem auto 0 auto;
+    padding: 30px;
+    font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background: #f1f1f1;
+    display: inline-block;
+    /* margin: auto; */
+    margin-left: 25px;
+    margin-top: 5px;
+    margin-right: 25px;
 
-     /* .cart-items h4{
- 
-        padding-top: 0px;
-     }
-   */
 
+}
+
+.cart-image-layout img {
+    width: 250px;
+    height: 120px;
+
+}
+
+.cart-items+div {
+    margin-bottom: 5%;
+}
+
+.cart-items button:focus {
+    background-color: rgb(250, 234, 230);
+    border: 2px solid rgb(0, 255, 76);
+}
+
+.cart-items p {
+    color: blue;
+    margin: -5px;
+}
+
+.cart-items h4 {
+
+    margin-top: 0px;
+}
+
+
+.cart-image-layout img:hover {
+    width: 300px;
+    height: 180px;
+
+
+}
